--- a/styles/weather_media_desktop.css
+++ b/styles/weather_media_desktop.css
@@ -8,109 +8,118 @@
   }
 
   article {
+    margin: 0;
+    padding: 0;
     background: linear-gradient(to bottom, #3498db, #144261);
     border-radius: 25px;
     font-size: 150%;
-    width: 45%;
-    min-width: min-content;
+    width: 25%;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: fit-content;
+
+    > img {
+      width: 60%;
+      height: 60%;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      text-align: center;
+      padding-bottom: 15px;
+    }
+
+    li img {
+      width: 15%;
+      height: 15%;
+      margin-right: 15px;
+      transform: translate(120%, -25%);
+      float:left;
+    }
+  }
+
+  h2 {
+    padding-top: 15px;
+    margin: 0;
+    font-size: 250%;
   }
 
   aside {
     background: linear-gradient(to top, #3498db, #144261);
-    width: fit-content;
+    width: 25%;
     border-radius: 25px;
     height: fit-content;
-    font-size: 100%;
-  }
-
-  h2 {
+    font-size: 60%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
     align-items: center;
-    padding-top: 15px;
-    margin: 0;
-  }
+    align-content: center;
 
-  aside ul {
-    list-style-type: none;
-    padding: 5px;
-    margin: 0;
-  }
+    ul {
+      list-style-type: none;
+      width: 95%;
+    }
 
-  aside ul :last-child {
-    border-radius: 0 0 15px 15px;
-  }
+    ul:last-child {
+      border-radius: 0 0 15px 15px;
+    }
 
-  td {
-    text-align: center;
-    vertical-align: middle;
-  }
+    p {
+      padding: 2px;
+      margin: 0;
+    }
 
-  aside li {
-    width: 95%;
-    display: flex;
-    border: 1px solid #ebf5ee;
-    margin: 5px;
-  }
+    li {
+      width: 92.5%;
+      display: flex;
+      border-top: 1px solid #ebf5ee;
+      border-bottom: 1px solid #ebf5ee;
+      align-items: center;
+      font-size: 250%;
+      margin-bottom: 10px;
+    }
 
-  article img {
-    width: 35%;
-  }
-
-  aside li img {
-    width: 20%;
-    height: 20%;
-  }
-
-  .centrer-elements {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .main {
-    display: flex;
-    align-items: center;
-    padding-bottom: 15px;
-    padding-left: 50%;
-    transform: translate(-15%);
+    li img {
+      width: 30%;
+      height: 30%;
+    }
   }
 
   section {
     background: linear-gradient(to bottom, #ffdb58, #ffb347, #ff8c00, #ff4500);
-    width: fit-content;
-    height: fit-content;
     padding: 15px;
     border-radius: 25px;
-    font-size: 125%;
-  }
+    font-size: 100%;
+    margin-bottom: 10px;
+    height: fit-content;
 
-  td,
-  th {
-    border: 3px solid #ddd;
-    padding: 8px;
-  }
-  th {
-    border-radius: 17px 17px 0 0;
-  }
+    td,
+    th {
+      border: 3px solid #ddd;
+      padding: 8px;
+      text-align: center;
+      vertical-align: middle;
+    }
 
-  td:first-child {
-    border-radius: 0 0 0 17px;
-  }
+    th {
+      border-radius: 17px 17px 0 0;
+    }
 
-  td:last-child {
-    border-radius: 0 0 17px 0;
-  }
+    td:first-child {
+      border-radius: 0 0 0 17px;
+    }
 
-  .logo {
-    width: 15%;
-    padding-right: 15px;
-  }
-
-  aside p {
-    padding: 2px;
-    margin: 0;
+    td:last-child {
+      border-radius: 0 0 17px 0;
+    }
   }
 
   .loading {
