--- a/styles/weather_media_desktop.css
+++ b/styles/weather_media_desktop.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 1024px) {
   body {
-    background-color: #252525;
+    background: linear-gradient(to bottom, #363636, #252525);
     color: #ebf5ee;
     display: flex;
     flex-wrap: wrap;
@@ -10,7 +10,11 @@
   article {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #3498db, #144261);
+    color: #252525;
+    background-image: url('../assets/background_d.jpg');
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 25px;
     font-size: 150%;
     width: 25%;
@@ -25,6 +29,7 @@
       width: 60%;
       height: 60%;
     }
+
 
     ul {
       list-style-type: none;
@@ -41,7 +46,7 @@
       height: 15%;
       margin-right: 15px;
       transform: translate(120%, -25%);
-      float:left;
+      float: left;
     }
   }
 
@@ -104,7 +109,7 @@
     td,
     th {
       border: 3px solid #ddd;
-      padding: 8px;
+      padding: 15px;
       text-align: center;
       vertical-align: middle;
     }
@@ -113,12 +118,14 @@
       border-radius: 17px 17px 0 0;
     }
 
-    td:first-child {
-      border-radius: 0 0 0 17px;
-    }
+    tr:last-child {
+      td:first-child {
+        border-radius: 0 0 0 17px;
+      }
 
-    td:last-child {
-      border-radius: 0 0 17px 0;
+      td:last-child {
+        border-radius: 0 0 17px 0;
+      }
     }
   }
 
