--- a/styles/weather_media_desktop.css
+++ b/styles/weather_media_desktop.css
@@ -1,21 +1,28 @@
 @media only screen and (min-width: 1024px) {
   body {
-    background: linear-gradient(to bottom, #363636, #252525);
-    background-color: #363636;
     color: #ebf5ee;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    overflow-x: hidden;
+  }
+
+  body::before {
+    content: "";
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #363636, #252525);
+    z-index: -1;
   }
 
   article {
     margin: 0;
     padding: 0;
     color: #252525;
-    background-image: url('../assets/background_d.jpg');
-    background-size: cover; 
+    background-image: url("../assets/background_d.jpg");
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 25px;
@@ -32,7 +39,6 @@
       width: 60%;
       height: 60%;
     }
-
 
     ul {
       list-style-type: none;
