--- a/styles/weather_media_mobile.css
+++ b/styles/weather_media_mobile.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    align-content: center;
+    width: auto;
   }
 
   body::before {
@@ -27,7 +29,8 @@
     background-repeat: no-repeat;
     border-radius: 25px;
     font-size: 220%;
-    width: 75%;
+    width: 95%;
+    min-width: 200px;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
@@ -44,17 +47,22 @@
       padding: 0;
     }
 
+    li > div {
+      display: flex;
+      vertical-align: middle;
+      align-items: center;
+      justify-content: center;
+    }
+
     li {
       text-align: center;
       padding-bottom: 15px;
     }
 
-    li img {
+    li div img {
       width: 15%;
       height: 15%;
       margin-right: 15px;
-      transform: translate(120%, -25%);
-      float: left;
     }
   }
 
@@ -66,10 +74,11 @@
 
   aside {
     background: linear-gradient(to top, #3498db, #144261);
-    width: 75%;
+    width: 95%;
+    min-width: 200px;
     border-radius: 25px;
     height: fit-content;
-    font-size: 100%;
+    font-size: 70%;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
@@ -110,8 +119,13 @@
     background: linear-gradient(to bottom, #ffdb58, #ffb347, #ff8c00, #ff4500);
     padding: 15px;
     border-radius: 25px;
-    font-size: 350%;
+    font-size: 125%;
     margin-bottom: 10px;
+    width: 90%;
+
+    table {
+      width: 100%;
+    }
 
     td,
     th {
