--- a/styles/weather_media_desktop.css
+++ b/styles/weather_media_desktop.css
@@ -46,16 +46,20 @@
     }
 
     li {
-      text-align: center;
       padding-bottom: 15px;
     }
+    
+    li > div {
+      display: flex;
+      vertical-align: middle;
+      align-items: center;
+      justify-content: center;
+    }
 
-    li img {
+    li div img {
       width: 15%;
       height: 15%;
-      margin-right: 15px;
-      transform: translate(120%, -25%);
-      float: left;
+      padding-right: 25px;
     }
   }
 
