--- a/styles/weather.css
+++ b/styles/weather.css
@@ -13,6 +13,7 @@ body {
     "card1 card2"
     "card3 card2";
   grid-template-columns: minmax(350px, 30%) auto;
+  grid-template-rows: minmax(400px, 55%) auto;
   gap: 25px;
   color: var(--text-color);
   font-family: "Muli", sans-serif;
@@ -83,10 +84,50 @@ body {
   section {
     background-color: var(--bg-color-card);
     grid-row: 0;
-    height: fit-content;
     border-radius: 25px;
     padding: 10px;
+    height: fit-content;
     grid-area: card3;
+
+    #cadran_solaire {
+        display: grid;
+        grid-template-columns: 10% auto 10%;
+        background-image: url("../assets/clock.png");
+        background-size: contain;
+        background-position: top;
+        background-repeat: no-repeat;
+        height: 150px;
+        padding-bottom: 15px;
+
+        #aiguille{
+            width: 50%;
+            height: 5px;
+            border-radius: 5px;
+            border: 2px dotted #252525;
+            align-self: end;
+            transform: rotate(10deg);
+            transform-origin: 100% 100%;
+            padding: 0;
+            margin: 0;
+
+            > span {
+                background-color: var(--text-color);
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+                min-width: 70%;
+                width: 50px;
+                height: 100%;
+                transform: translate(40%, 0px);
+            }
+        }
+        p {
+            align-self: end;
+            padding: 0;
+            margin: 0;
+        }
+    }
+    
   }
 
   ul {
