--- a/styles/weather.css
+++ b/styles/weather.css
@@ -7,27 +7,32 @@ body {
   background-color: #27374d;
   background-image: url(../assets/pexels-eberhard-grossgasteiger-1743366.jpg);
   background-size: cover;
+  color: var(--text-color);
+  font-family: "Muli", sans-serif;
 
   main {
     background-position: center;
     display: grid;
     grid-template-areas:
       "card1 card2"
-      "card3 card2";
+      "card3 card2"
+      "card4 card2";
     grid-template-columns: minmax(350px, 30%) auto;
-    grid-template-rows: minmax(350px, 70%) auto;
+    grid-template-rows: minmax(350px, 70%) fit-content fit-content;
     row-gap: 5px;
-    column-gap: 15px;
-    color: var(--text-color);
-    font-family: "Muli", sans-serif;
+    column-gap: 50px;
+    
 
-    > :nth-child(1) {
-      display: flex;
-      flex-direction: column;
+    article {
       background-color: var(--bg-color-card);
       border-radius: 25px;
-      align-items: center;
       height: fit-content;
+    }
+
+    #card1 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 20px;
       grid-area: card1;
       font-size: 125%;
@@ -57,11 +62,8 @@ body {
         }
       }
     }
-    > :nth-child(2) {
-      background-color: var(--bg-color-card);
-      border-radius: 25px;
+    > #card2 {
       width: fit-content;
-      height: fit-content;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -70,29 +72,34 @@ body {
         display: flex;
         border-top: 3px solid var(--border-color);
         border-bottom: 3px solid var(--border-color);
-        margin: 15px;
+        margin: 15px 25px 15px 25px;
         padding: 5px;
+        font-size: 120%;
 
         p {
           padding: 0;
           margin: 0;
-          padding-top: 3%;
+          padding-top: 7%;
         }
         > img {
-          width: 30%;
-          height: 30%;
+          width: 40%;
+          height: 40%;
         }
       }
     }
 
-    > :nth-child(3) {
+    > #card3 {
       margin: 0;
-      background-color: var(--bg-color-card);
       grid-row: 0;
-      border-radius: 25px;
       padding: 10px;
-      height: fit-content;
       grid-area: card3;
+
+      h2 {
+        width: 100%;
+        display: flex;
+        align-items: center;
+      }
+
 
       #cadran_solaire {
         display: grid;
@@ -130,6 +137,16 @@ body {
           padding: 0;
           margin: 0;
         }
+      }
+    }
+
+    > #card4 {
+      padding: 10px;
+      font-size: 125%;
+
+      #auteur {
+        font-style: italic;
+        padding-left: 20px;
       }
     }
 
